Added meta-tags för SEO

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <link rel="stylesheet" href="style.css">
+    <meta name="description" content="Denna sida är ett CV för Mikael Flink från Mellerud, Dalsland">
+    <meta name="keywords" content="CV, Mikael Flink, Flink Fishing, Javascript, C#, Systemutveckling, dotnet, HTML/CSS">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV - Mikael Flink</title>
@@ -96,7 +98,7 @@
             <aside>
             <video class="logo-video" controls>
                 <source src="images/ff-video.mp4" type="video/mp4">
-                Tyvärr kan inte videon spelas upp.
+                Something went wrong while trying to play video.
             </video>
         </aside>
         </div>
