--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
                 <li>Travers, truck och hjullastarkörning</li>
             </ul>
         </main>
-        <div class="sidebar"> <!-- Best practice would be that .sidebar be put in main also, but since we talked about it after   class the other day I didn't change it now afterwards. :) -->
+        <div class="sidebar">
+            <!-- Best practice would be that .sidebar be put in main also, but since we talked about it after   class the other day I didn't change it now afterwards. :) -->
             <h2>Färdigheter</h2>
             <ul>
                 <li>Lösningsorienterad</li>
@@ -96,11 +97,11 @@
                 <li>Driver Youtube-kanal</li>
             </ul>
             <aside>
-            <video class="logo-video" controls>
-                <source src="images/ff-video.mp4" type="video/mp4">
-                Something went wrong while trying to play video.
-            </video>
-        </aside>
+                <video class="logo-video" controls>
+                    <source src="images/ff-video.mp4" type="video/mp4">
+                    Something went wrong while trying to play video.
+                </video>
+            </aside>
         </div>
     </div>
 </body>
